plugins {
    id 'java'
    id 'application'
    //JavaFX 플러그인
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gradleup.shadow' version '8.3.6'
}

group = 'com'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //이미지
    implementation("net.coobird:thumbnailator:0.4.21")
    //영상
    implementation 'org.bytedeco:javacv:1.5.13'
    implementation 'org.bytedeco:javacpp:1.5.13'
    implementation 'org.bytedeco:javacpp:1.5.13:macosx-arm64'
    implementation 'org.bytedeco:ffmpeg:8.0.1-1.5.13'
    implementation 'org.bytedeco:ffmpeg:8.0.1-1.5.13:macosx-arm64'
}

javafx {
    version = "21.0.6"
    modules = [ 'javafx.controls' ]
}

application {
    mainClass = 'com.pixelflux.Launcher'
    applicationDefaultJvmArgs = [
            '-Dfile.encoding=UTF-8',
            '-Xdock:name=PixelFlux',
            '-XX:+TieredCompilation',
            '-XX:TieredStopAtLevel=1', // 💡 GUI 시작 즉시 가속
            '-Xverify:none'            // 바이트코드 검증 스킵
    ]
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jar {
    manifest {
        attributes 'Main-Class': 'com.pixelflux.Launcher'
    }
}

test {
    useJUnitPlatform()
}